// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePickerOptions returns the options 1`] = `
Object {
  "menu": Object {
    "nudgeBottom": 55,
    "nudgeRight": 0,
  },
}
`;

exports[`DatePickerOptions returns the options and merge correctly 1`] = `
Object {
  "menu": Object {
    "nudgeBottom": 80,
    "nudgeRight": 0,
  },
  "other": Object {
    "test": true,
  },
}
`;
